ch7/ch7-better-errors/panic-to-result-usage/tests/fails/create_person_with_empty_panic.stderr
error: please make sure every panic in your function has a message
  --> tests/fails/create_person_with_empty_panic.rs:12:9
   |
12 |         panic!();
   |         ^^^^^
